# inveniordm_jlab

./: .invenio  Pipfile  README.md  docker-compose.full.yml  docker-services.yml  invenio.cfg
app_data/: vocabularies.yaml
app_data/vocabularies/: cc_licences.csv  collaboration.yaml  collision.yaml  funders_test.yaml  hall.yaml  jlab_beam.yaml  jlab_division.yaml  pac_rating.yaml  pac_status.yaml  target.yaml  thesis_types.yaml
docker/nginx/: Dockerfile  hostcert.pem  hostkey.pem  test.crt  test.key
docker/nginx/conf.d/: default.conf
docker/pgadmin/: servers.json
site/: .gitkeep  setup.cfg
site/ inveniordm_jlab/: views.py  webpack.py
site/inveniordm_jlab/: permissions.py  views.py  webpack.py
templates/semantic-ui/invenio_app_rdm/help/: search.en.html
