
[metadata]
name = inveniordm_jlab

[options.extras_require]
tests =
    pytest-invenio>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.blueprints =
    inveniordm_jlab_views = inveniordm_jlab.views:create_blueprint
invenio_assets.webpack =
    inveniordm_jlab_theme = inveniordm_jlab.webpack:theme
